Chapter Conclusion adjusted and finished.

--- a/text/tex/content.tex
+++ b/text/tex/content.tex
@@ -29,7 +29,7 @@ The principle of the optical localization of objects, which is based on triangul
 
 The OLS aims to utilize the same principle as the old optical range finders. However, instead of an optical device requiring the operator to aim on the target manually the OLS takes advantage of the RGB cameras and the image processing techniques capable of tracking and localizing the target autonomously without the need for a human to interfere. Furthermore, with the use of sensors capable of finding a geographical position of each observing unit the OLS system estimates a global geographical position of a given target represented in standard coordinate system (UTM and/or WGS84). A simple schema explaining the operation of the OLS is depicted in Figure \ref{fig:ols_principle}.
 
-This work is organized as follows: In Chapter \ref{txt:related_work} the existing approaches to visual tracking, multi-camera target localization and 3D environment reconstruction are summarized and their suitability for the OLS is discussed. Chapter \ref{txt:precision_of_the_localization} provides thorough analysis of the main sources of localization imprecisions in the OLS and proposes the methods to alleviate the error. Chapter \ref{txt:design_of_the_OLS} describes the design of the OLS from the perspective of system model, visual tracking, triangulation with noisy measurements and occlusion prediction. Chapter \ref{txt:implementation} explains the technical details of the implementation and Chapter \ref{txt:experimental_results} presents the results of conducted experiments. Finally, Chapter \ref{txt:conclusion} concludes the work.
+This work is organized as follows: In Chapter \ref{txt:related_work} the existing approaches to visual tracking, multi-camera target localization and 3D environment reconstruction are summarized and their suitability for the OLS is discussed. Chapter \ref{txt:precision_of_the_localization} provides thorough analysis of the main sources of localization imprecisions in the OLS and proposes the methods to alleviate the error. Chapter \ref{txt:design_of_the_OLS} describes the design of the OLS from the perspective of system model, visual tracking, triangulation with noisy measurements and occlusion prediction. Chapter~\ref{txt:implementation} explains the technical details of the implementation and Chapter \ref{txt:experimental_results} presents the results of conducted experiments. Finally, Chapter \ref{txt:conclusion} concludes the work.
 
 %% The main principle of the OLS.
 \begin{figure}[htb]\centering
@@ -1412,14 +1412,15 @@ An attempt was made to localize another moving target in \textsc{pitch} dataset 
 %=========================================================================
 \chapter{Conclusion} \label{txt:conclusion}
 
-A novel system for autonomous optical localization of arbitrary distant targets was presented in this work. The system is based on the visual tracking and mutli-view triangulation approaches. Triangulation is well known and widely used approach, however, the main contribution of the system is its semi-autonomous operation based on mere visual clues as opposed to the actively radiating solutions such as radars.
-
-First, the existing state-of-the-art approaches to visual tracking were summarized and two techniques, the TLD tracker and BGFG tracker, were selected to be incorporated in the OLS. Then the problematics of multi-view triangulation was discussed and the approaches used to reconstruct the 3D environment which could be used as the base for occlusion prediction were discussed.
+A novel system for semi-autonomous optical localization of arbitrary distant targets was presented in this work. First, the existing state-of-the-art approaches to visual tracking were summarized and two techniques, the TLD tracker and BGFG tracker, were selected to be incorporated in the OLS. Then the problematics of multi-view triangulation was discussed and the approaches used to reconstruct the 3D environment were discussed.
 
 Thorough precision analysis was performed so as to pinpoint the most severe sources of the error. The geometrical limitations of the OLS were demonstrated and the merits of multiple-view setup over the stereo setup in the means of localization precision were shown. The stationing and rectification procedures aiming on eliminating the systematic error were then proposed. 
 
-The model of the camera unit based on the kinematic chain was then proposed. In order to minimize the impact of the random error the BGFG tracker was adjusted so as to estimate the belief of each measurement and to include the information from frame differencing. Suitable functions for regulating the motion of the P\&T unit were discussed and the approach to triangulate the target position with the knowledge of trackers' belief and target-base geometry was proposed.
+The kinematic chain based model of the camera was proposed and the BGFG tracker was adjusted so as to minimize the impact of the random error. Suitable functions for regulating the motion of the P\&T unit were discussed and the approach to triangulate the target position with the knowledge of trackers' belief and target-base geometry was designed.
 
-The OLS was implemented in C++ within the framework ROS. Additionally, the physical simulator Gazebo was used in both development and testing phase. The OLS was first tested using Gazebo in the hardware-in-the-loop manner. Next, two datasets were obtained in the real world environment and the system was tested against both static and moving targets. It has been shown that the localization precision is 4-10 times lower than expected while most likely culprit is the imprecisely performed stationing and rectification.
+The OLS was implemented in C++ within the framework ROS and simulator Gazebo was used to test the system in hardware-in-the-loop manner. Real world datasets were obtained and the system was tested against both static and moving targets. It has been shown that the localization precision is 4-10 times lower than expected while most likely culprit is the imprecisely performed stationing and rectification.
 
-There are multiple possibilities of what to focus on in further development. The tracking algorithm should be investigated so that it would perform well even with cluttered background. More thorough stationing and rectification should be performed so as to verify the main source of imprecise localization was the systematic error. Furthermore, automatic detection and possibly classification of moving targets could be implemented and the approach to handoff the target among separate CUs should be proposed to make the OLS fully autonomous.
+As for the further development the tracking algorithm should be investigated so that it would perform well even with cluttered background and more thorough stationing and rectification should be performed. Furthermore, automatic detection and possibly classification of moving targets could be implemented and the approach 
+to handoff the target among separate CUs should be proposed to make the OLS fully autonomous.
+
+The work was conducted in collaboration with consortium of companies RCE systems s.r.o\footnote{The official website of RCE systems s.r.o: \url{http://www.rcesystems.cz/}}., Oprox a.s.\footnote{The official website of company Oprox a.s.: \url{http://www.oprox.cz/}} and the Department of Measurement at Faculty of Electrical Engineering, Czech Technical University in Prague\footnote{The official website of Department of Measurement, FEL, ČVUT: \url{http://measure.fel.cvut.cz}} as a real world application. The development will continue so that a standalone solution could be produced to potential customers.
